--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,9 @@ body{
 .footer{
     background-color: aquamarine;
 }
+.nama {
+    font-family: consolas;
+    font-size: 20px;
+    color: black;
+    text-align: center;
+}
